--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,7 +7,7 @@
     <div class="collapse navbar-collapse" id="nav-content">   
       <ul class="navbar-nav ml-auto">
         <li class="nav-item px-4">
-          <a class="nav-link" href="#"><%= t ".home" %></a>
+          <%= link_to t(".home"), root_path, class: "nav-link" %>
         </li>
         <li class="nav-item px-4">
           <a class="nav-link link-page" href="#about"><%= t ".about" %></a>
@@ -21,9 +21,20 @@
         <li class="nav-item px-4">
           <a class="nav-link" href="#"><%= t ".books" %></a>
         </li>
-        <li class="nav-item px-4">
-          <a class="nav-link" href="#"><%= t ".login" %></a>
-        </li>
+        <% if user_signed_in? %>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <%= image_tag("default_avatar.png", class: "avatar") %>
+            </a>
+            <div class="dropdown-menu bg-none" aria-labelledby="navbarDropdownMenuLink">
+              <%= link_to t(".logout"), destroy_user_session_path, method: :delete %> 
+            </div>
+          </li>
+        <% else %>
+          <li class="nav-item px-4">
+            <%= link_to t(".login"), new_user_session_path, class: "nav-link" %>
+          </li>
+        <% end %>
       </ul>
     </div>
   </div>
