--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -25,6 +25,7 @@
           <p><%= t ".title_content1" %></p>
         </div>
       </div>
+      <%= render("layouts/messages") %>
     </div>
     <div class="row justify-content-center">
       <div class="col-12 searchForm">
