--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -53,6 +53,31 @@
           <!-- close content info book -->
         </div>
       </div>
+      <div class="space-80"></div>
+      <ul class="nav nav-tabs" id="bookTab" role="tablist">
+        <li class="nav-item">
+          <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true"><%= t ".comment" %></a>
+        </li>
+      </ul>
+      <div class="tab-content" id="bookTabContent">
+        <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+          <!-- comment box-->
+          <div id="commentForm">
+            <%= render "comments/form" %>
+          </div>
+          <div id="commentPage">
+            <%= paginate @comments, theme: "twitter-bootstrap-4", pagination_class: "pagination-md float-right", remote: true %>
+            <div class="clearfix"></div>
+          </div>
+          <div id="commentBox">
+            <%= render partial: "comments/comment", collection: @comments %>
+          </div>
+          <div id="commentPage">
+            <%= paginate @comments, theme: "twitter-bootstrap-4", pagination_class: "pagination-md float-right", remote: true %>
+          </div>
+          <!-- close comment box-->
+        </div>
+      </div>
     </div>
   </div>
 </div>
