user filter book by category

--- a/app/assets/stylesheets/color.scss
+++ b/app/assets/stylesheets/color.scss
@@ -13,5 +13,9 @@ $color_rich_gold_approx: #a75c00;
 $color_lochinvar_approx: #35938b;
 $color_pine_green_approx: #00796b;
 $color_texas_rose_approx: #ffb74d;
+$color_flame_pea_approx: #eb5844;
 $color_mercury_approx: #dfe3e8;
 $mercury: #e5e5e5;
+$color_teal_approx: #00897b;
+$black_19: rgba(0,0,0,0.19);
+$black_23: rgba(0,0,0,0.23);
