--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -7,7 +7,7 @@ html,body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Quicksand', sans-serif;
+  font-family: 'Roboto', sans-serif;
   background-color: $color_wild_sand_approx;
 }
 
@@ -66,10 +66,12 @@ html,body {
   background-image:none;
   border-color:transparent;
   box-shadow:none;
+  
 }
 
 .affix{
   background: $color_pine_green_approx;
+  box-shadow: 0 10px 20px $black_19, 0 6px 6px rgba(0,0,0,0.23);
 }
 
 section {
@@ -91,10 +93,262 @@ section .section-title {
   height: 40px;
 }
 
+.margin-header {
+  margin-top: 54px;
+}
+
 .mapouter{
   text-align: right;
   height: 400px;
   width: 400px;
+}
+
+.gmap_canvas {
+  overflow: hidden;
+  background: none !important;
+  height: 400px;
+  width: 400px;
+}
+
+.bg-gray {
+  background-color: $color_wild_sand_approx;
+}
+
+.box {
+  margin: 80px auto 30px;
+  border: 1px solid black;
+  border-radius: 15px;
+  padding: 20px;
+  width: 40%;
+}
+
+.center {
+  text-align: center;
+}
+
+.style-error {
+  position: absolute;
+  top: 65px;
+}
+
+.avatar {
+  vertical-align: middle;
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+}
+
+.bg-none {
+  background: none;
+}
+
+.box-devise {
+  margin-top: 120px;
+  margin-bottom: 100px;
+  z-index: 10;
+  opacity: 0.9;
+  font-size: 14px;
+  box-shadow: 0 10px 20px $black_19, 0 6px 6px rgba(0,0,0,0.23);
+}
+
+.bg-login {
+  background: no-repeat center center scroll;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  background-image: url('https://cdn-images-1.medium.com/max/1000/1*V9GdNPhBPL0p-wgL3hMdwQ.png');
+  height: 100%;
+  width: 100%;
+  z-index: 2;
+  position: relative;
+  &:after {
+    background-color: $color_log_cabin_approx;
+    content: '';
+    height: 100%;
+    width: 100%;
+    left: 0;
+    opacity: 0.5;
+    position: absolute;
+    top: 0;
+    z-index: 1;
+  }
+}
+.center {
+  text-align: center;
+}
+
+.fix-padding8 {
+  padding-right: 8px !important;
+  padding-left: 8px !important;
+}
+.fix-padding {
+  padding-right: 0px !important;
+  padding-left: 0px !important;
+}
+.home-book-title {
+  height: 2.6rem;
+  overflow: hidden;
+  font-size: .9rem;
+  font-weight: 700;
+  color: $color_lochinvar_approx;
+  font-family: Tahoma,Verdana,Segoe,sans-serif;
+}
+
+.home-book-author {
+  height: 2.6rem;
+  overflow: hidden;
+  font-size: .75rem;
+  color: $color_rich_gold_approx;
+  font-weight: 700;
+  font-family: Tahoma, Verdana, Segoe, sans-serif;
+}
+
+
+.title-silderbar {
+  position: relative;
+  font-size: 16px;
+  font-weight: 600;
+}
+
+.content-silderbar {
+  font-size: 14px;
+  a {
+    color: black;
+    &:hover{
+      color: $color_teal_approx;
+      text-decoration: none;
+    }
+  }
+}
+
+.button-sliderbar {
+  position: absolute;
+  top:0;
+  bottom: 0;
+  right: 0;
+  padding: 0;
+}
+
+[data-toggle='collapse'] .fa:before {  
+  content: '\f077';
+}
+
+[data-toggle='collapse'].collapsed .fa:before {
+  content: '\f078';
+}
+
+.borrow-link {
+  text-transform: uppercase;
+  font-size: 14px;
+  font-weight: 500;
+  color: $color_ferra_approx;
+}
+
+.search-box {
+  width: 100%;
+  position: relative;
+
+  input {
+    border-color: $color_mercury_approx;
+    box-shadow: none
+  }
+
+  .input-group-btn .btn {
+    border-color: $color_pine_green_approx;
+    background: $color_pine_green_approx;
+    outline: none;
+  }
+}
+
+
+.search-box input, .search-box .btn {
+  min-height: 38px;
+  border-radius: 2px;
+}
+
+
+.navbar .navbar-right .dropdown-toggle::after {
+  display: none;
+}
+
+.navbar .dropdown-menu {
+  border-radius: 1px;
+  border-color: $mercury;
+  box-shadow: 0 2px 8px rgba(0,0,0,.05);
+}
+
+.navbar .dropdown-menu li a {
+  padding: 6px 20px;
+}
+
+.navbar .navbar-right .dropdown-menu {
+  width: 400px;
+  padding: 20px;
+  left: auto;
+  right: 0;
+  font-size: 14px;
+}
+
+@media (max-width: 768px){
+  .navbar .navbar-right .dropdown-menu {
+  width: 100%;
+  background: transparent;
+  padding: 10px 20px;
+  }
+}
+
+.hide {
+  display: none !important;
+}
+
+.bg-book-page {
+  min-height: 30vh;
+  background: no-repeat center center scroll;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  position: relative;
+  background-image: url('https://cdn-images-1.medium.com/max/1000/1*V9GdNPhBPL0p-wgL3hMdwQ.png');
+  &:after {
+    background-color: $color_log_cabin_approx;
+    content: '';
+    height: 100%;
+    left: 0;
+    opacity: 0.8;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    z-index: 2;
+  }
+}
+
+.title-list {
+  text-transform: uppercase;
+  font-size: 16px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: 500;
+}
+
+// Footer
+#footer {
+  background: $color_shark_approx !important;
+
+  h5 {
+    padding-left: 10px;
+    border-left: 3px solid $color_gallery_approx;
+    padding-bottom: 6px;
+    margin-bottom: 20px;
+    color: white;
+  }
+
+  a {
+    color: white;
+    text-decoration: none !important;
+    background-color: transparent;
+    -webkit-text-decoration-skip: objects;
+  }
 }
 
 .gmap_canvas {
@@ -238,105 +492,6 @@ section .section-title {
   }
 }
 
-
-.search-box input, .search-box .btn {
-  min-height: 38px;
-  border-radius: 2px;
-}
-
-
-.navbar .navbar-right .dropdown-toggle::after {
-  display: none;
-}
-
-.navbar .dropdown-menu {
-  border-radius: 1px;
-  border-color: $mercury;
-  box-shadow: 0 2px 8px rgba(0,0,0,.05);
-}
-
-.navbar .dropdown-menu li a {
-  padding: 6px 20px;
-}
-
-.navbar .navbar-right .dropdown-menu {
-  width: 400px;
-  padding: 20px;
-  left: auto;
-  right: 0;
-  font-size: 14px;
-}
-
-@media (max-width: 768px){
-  .navbar .navbar-right .dropdown-menu {
-  width: 100%;
-  background: transparent;
-  padding: 10px 20px;
-  }
-}
-
-.hide {
-  display: none !important;
-}
-
-.bg-book-page {
-  min-height: 30vh;
-  background: no-repeat center center scroll;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  position: relative;
-  background-image: url('https://cdn-images-1.medium.com/max/1000/1*V9GdNPhBPL0p-wgL3hMdwQ.png');
-  &:after {
-    background-color: $color_log_cabin_approx;
-    content: '';
-    height: 100%;
-    left: 0;
-    opacity: 0.8;
-    position: absolute;
-    top: 0;
-    width: 100%;
-    z-index: 2;
-  }
-}
-
-.title-list {
-  text-transform: uppercase;
-  font-size: 16px;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-weight: 500;
-}
-
-// Footer
-#footer {
-  background: $color_shark_approx !important;
-
-  h5 {
-    padding-left: 10px;
-    border-left: 3px solid $color_gallery_approx;
-    padding-bottom: 6px;
-    margin-bottom: 20px;
-    color: white;
-  }
-
-  a {
-    color: white;
-    text-decoration: none !important;
-    background-color: transparent;
-    -webkit-text-decoration-skip: objects;
-  }
-}
-
-@media (max-width:767px){
-  #footer h5 {
-    padding-left: 0;
-    border-left: transparent;
-    padding-bottom: 0px;
-    margin-bottom: 10px;
-  }
-}
-
 .mt-100 {
   margin-top: 100px;
 }
@@ -425,5 +580,111 @@ section .section-title {
     background-size: 30px 30px;
     height: 30px;
     width: 30px;
+  }
+}
+
+.search-box input, .search-box .btn {
+  min-height: 38px;
+  border-radius: 2px;
+}
+
+.book-card {
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+}
+
+.navbar .navbar-right .dropdown-toggle::after {
+  display: none;
+}
+
+.navbar .dropdown-menu {
+  border-radius: 1px;
+  border-color: $mercury;
+  box-shadow: 0 2px 8px rgba(0,0,0,.05);
+}
+
+.navbar .dropdown-menu li a {
+  padding: 6px 20px;
+}
+
+.navbar .navbar-right .dropdown-menu {
+  width: 400px;
+  padding: 20px;
+  left: auto;
+  right: 0;
+  font-size: 14px;
+}
+
+@media (max-width: 768px){
+  .navbar .navbar-right .dropdown-menu {
+  width: 100%;
+  background: transparent;
+  padding: 10px 20px;
+  }
+}
+
+.hide {
+  display: none !important;
+}
+
+.bg-book-page {
+  min-height: 30vh;
+  background: no-repeat center center scroll;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  position: relative;
+  background-image: url('https://cdn-images-1.medium.com/max/1000/1*V9GdNPhBPL0p-wgL3hMdwQ.png');
+  &:after {
+    background-color: $color_log_cabin_approx;
+    content: '';
+    height: 100%;
+    left: 0;
+    opacity: 0.8;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    z-index: 2;
+  }
+}
+
+.title-list {
+  text-transform: uppercase;
+  font-size: 16px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: 500;
+}
+
+.num-search {
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+}
+
+// Footer
+#footer {
+  background: $color_shark_approx !important;
+
+  h5 {
+    padding-left: 10px;
+    border-left: 3px solid $color_gallery_approx;
+    padding-bottom: 6px;
+    margin-bottom: 20px;
+    color: white;
+  }
+
+  a {
+    color: white;
+    text-decoration: none !important;
+    background-color: transparent;
+    -webkit-text-decoration-skip: objects;
+  }
+}
+
+@media (max-width:767px){
+  #footer h5 {
+    padding-left: 0;
+    border-left: transparent;
+    padding-bottom: 0px;
+    margin-bottom: 10px;
   }
 }
