--- a/app/views/books/_search_book.html.erb
+++ b/app/views/books/_search_book.html.erb
@@ -1,6 +1,8 @@
 <div class="col-sm-6 col-md-4 col-lg-3 fix-padding8 mb-4">
-  <div class="card">
-    <%= image_tag search_book.image, class: "card-img-top" %>
+  <div class="card book-card">
+    <%= link_to  book_path(search_book) do %>
+      <%= image_tag search_book.image, class: "card-img-top" %>
+    <% end %>
     <div class="card-body fix-padding8">
       <div class="home-book-title text-left">
         <%= search_book.name%>
