--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,18 +1,28 @@
-<div class="container box">
-<%= bootstrap_devise_error_messages! %>
-
-<h1 class="center"><%= t(".resend_confirmation_instructions", default: "Resend confirmation instructions") %></h1>
-
-<%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post, role: "form" }) do |f| %>
-  <div class="form-group">
-    <%= f.label :email %>
-    <%= f.email_field :email, autofocus: true, class: "form-control"  %>
+<div class="bg-login">
+  <div class="row justify-content-center">
+    <div class="col-sm-12 col-md-5">
+      <div class="space-40"></div>
+      <div class="card box-devise ">
+        <div class="card-body">
+          <p class="center h4"><%= t(".resend_confirmation_instructions", default: "Resend confirmation instructions") %></p>
+          <div>
+            <%= bootstrap_devise_error_messages! %>
+          </div>
+          <%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post, role: "form" }) do |f| %>
+            <div class="form-group">
+              <%= f.label :email %>
+              <%= f.email_field :email, autofocus: true, class: "form-control"  %>
+            </div>
+            <div class="form-group">
+              <%= f.submit t(".resend_confirmation_instructions", default: "Resend confirmation instructions"), class: "btn btn-primary form-control" %>
+            </div>
+          <% end %>
+          <%= render "devise/shared/links" %>
+          
+        </div>
+      </div>
+      <div class="space-80"></div>
+      </div>
+    </div>
   </div>
-
-  <div class="form-group">
-    <%= f.submit t(".resend_confirmation_instructions", default: "Resend confirmation instructions"), class: "btn btn-primary" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
 </div>
