--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,18 +1,27 @@
-<div class="container box">
-<%= bootstrap_devise_error_messages! %>
+<div class="bg-login">
+  <div class="row justify-content-center">
+    <div class="col-sm-12 col-md-5">
+      <div class="space-40"></div>
+      <div class="card box-devise ">
+        <div class="card-body">
+          <p class="center h3"><%= t(".forgot_your_password", default: "Forgot your password?") %></p>
+          <div>
+            <%= bootstrap_devise_error_messages! %>
+          </div>
+          <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post, role: "form" }) do |f| %>
+            <div class="form-group">
+              <%= f.label :email %>
+              <%= f.email_field :email, autofocus: true, class: "form-control" %>
+            </div>
 
-<h1 class="center"><%= t(".forgot_your_password", default: "Forgot your password?") %></h1>
-
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post, role: "form" }) do |f| %>
-  <div class="form-group">
-    <%= f.label :email %>
-    <%= f.email_field :email, autofocus: true, class: "form-control" %>
+            <div class="form-group">
+              <%= f.submit t(".send_me_reset_password_instructions", default: "Send me reset password instructions"), class: "btn btn-primary form-control" %>
+            </div>
+          <% end %>
+          <%= render "devise/shared/links" %>
+        </div>
+      </div>
+      <div class="space-80"></div>
+    </div>
   </div>
-
-  <div class="form-group">
-    <%= f.submit t(".send_me_reset_password_instructions", default: "Send me reset password instructions"), class: "btn btn-primary" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
 </div>
