--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,26 +1,34 @@
-<div class="container box">
-<%= bootstrap_devise_error_messages! %>
+<div class="bg-login">
+  <div class="row justify-content-center">
+    <div class="col-sm-12 col-md-5">
+      <div class="card box-devise ">
+        <div class="card-body">
+          <p class="center h1"><%= t(".sign_up", default: "Sign up") %></p>
+          <div>
+            <%= bootstrap_devise_error_messages! %>
+          </div>
+          <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { role: "form" }) do |f| %> 
+            <div class="form-group">
+              <%= f.label :email %>
+              <%= f.email_field :email, autofocus: true, class: "form-control" %>
+            </div>
+            <div class="form-group">
+              <%= f.label :password %>
+              <%= f.password_field :password, class: "form-control" %>
+            </div>
+            <div class="form-group">
+              <%= f.label :password_confirmation %>
+              <%= f.password_field :password_confirmation, class: "form-control" %>
+            </div>
 
-<h1 class="text-center"><%= t(".sign_up", default: "Sign up") %></h1>
+            <div class="form-group">
+              <%= f.submit t(".sign_up", default: "Sign up"), class: "btn btn-primary form-control" %>
+            </div>
+          <% end %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { role: "form" }) do |f| %> 
-  <div class="form-group">
-    <%= f.label :email %>
-    <%= f.email_field :email, autofocus: true, class: "form-control" %>
+          <%= render "devise/shared/links" %>
+        </div>
+      </div>
+    </div>
   </div>
-  <div class="form-group">
-    <%= f.label :password %>
-    <%= f.password_field :password, class: "form-control" %>
-  </div>
-  <div class="form-group">
-    <%= f.label :password_confirmation %>
-    <%= f.password_field :password_confirmation, class: "form-control" %>
-  </div>
-
-  <div class="form-group">
-    <%= f.submit t(".sign_up", default: "Sign up"), class: "btn btn-primary" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
 </div>
