--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,11 +6,14 @@
 
     <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track": "reload" %>
     <%= javascript_include_tag "application", "data-turbolinks-track": "reload" %>
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   </head>
 
   <body>
     <%= render "layouts/header" %>
-    <%= yield %>
+    <div class="margin-header"> 
+      <%= yield %>
+    </div>
     <%= render "layouts/footer" %>
   </body>
 </html>
