user view list and search book, author, publishers

--- a/app/assets/stylesheets/color.scss
+++ b/app/assets/stylesheets/color.scss
@@ -6,3 +6,12 @@ $white: #fff;
 $wild_sand: #f4f4f4;
 $color_pomegranate_approx: #e84d1c;
 $color_oslo_gray_approx: #7b8a99;
+$color_shark_approx: #242424;
+$color_log_cabin_approx: #222222;
+$color_ferra_approx: #6d4c41;
+$color_rich_gold_approx: #a75c00;
+$color_lochinvar_approx: #35938b;
+$color_pine_green_approx: #00796b;
+$color_texas_rose_approx: #ffb74d;
+$color_mercury_approx: #dfe3e8;
+$mercury: #e5e5e5;
