--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -1,12 +1,11 @@
-
 <% if notice %>
-  <span class="alert alert-success style-error">
+  <div class="alert alert-success">
     <%= notice %>
-  </span>
+  </div>
 <% end %>
 
 <% if alert %>
-  <span class="alert alert-danger style-error">
+  <div class="alert alert-danger">
     <%= alert %>
-  </span>
+  </div>
 <% end %>
