--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,23 +3,43 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav-content" aria-controls="nav-content" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <a class="navbar-brand" href="#"><%= t ".logo" %></a>
+    <a class="navbar-brand " href="#"><%= image_tag Settings.icons %> <%= t ".logo" %></a>
     <div class="collapse navbar-collapse" id="nav-content">   
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item px-4">
+      <ul class="navbar-nav ">
+        <li class="nav-item px-3">
           <%= link_to t(".home"), root_path, class: "nav-link" %>
         </li>
-        <li class="nav-item px-4">
+        <li class="nav-item px-3">
           <a class="nav-link link-page" href="#about"><%= t ".about" %></a>
         </li>
-        <li class="nav-item px-4">
+        <li class="nav-item px-3">
           <a class="nav-link link-page" href="#contact"><%= t ".contact" %></a>
         </li>
-        <li class="nav-item px-4">
+        <li class="nav-item px-3">
           <a class="nav-link" href="#"><%= t ".category" %></a>
         </li>
-        <li class="nav-item px-4">
+        <li class="nav-item px-3">
           <a class="nav-link" href="#"><%= t ".books" %></a>
+        </li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right ml-auto">
+        <li class="nav-item dropdown">
+          <a data-toggle="dropdown" class="nav-link dropdown-toggle" href="#"><i class="fa fa-search"></i></a>
+          <a data-toggle="dropdown" class="nav-link dropdown-toggle hide" href="#"><i class="fa fa-close"></i></a>
+          <ul class="dropdown-menu dropdown-menu-right">
+            <li>
+              <%= form_tag books_path, method: :get do %>
+                <div class="input-group search-box">
+                  <%= text_field_tag "search", params[:search], required: true, placeholder: t(".search"), class: "form-control" %>
+                  <div class="input-group-append input-group-btn">
+                    <button class="btn btn-success" type="submit">
+                      <i class="fa fa-search"></i>
+                    </button>
+                  </div>
+                </div>
+              <% end %>
+            </li>
+          </ul>
         </li>
         <% if user_signed_in? %>
           <li class="nav-item dropdown">
