Show detail book

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -1,6 +1,7 @@
 @import 'bootstrap';
 @import 'color';
 @import url('https://fonts.googleapis.com/css?family=Quicksand:400,500,700');
+@import 'social-share-button';
 
 html,body {
   margin: 0;
@@ -195,4 +196,95 @@ margin-right: 5px;
 
 .bg-none {
   background: none;
+}
+
+.mt-100 {
+  margin-top: 100px;
+}
+
+.ml-140 {
+  margin-left: 140px;
+}
+
+.style-image {
+  margin-left: 80px;
+  width: 250px;
+  height: 300px;
+}
+
+.product-page {
+  background: $white;
+  padding: 22px;
+  position: relative;
+  margin-right: 10px;
+}
+
+.product-page h1 {
+  border-bottom: 1px solid $wild_sand;
+  padding-bottom: 12px;
+}
+
+.price-availability-block {
+  border-bottom: 1px solid $wild_sand;
+  padding-bottom: 12px;
+  margin-bottom: 17px;
+}
+
+.price-availability-block .author {
+  float: left;
+  font-family: 'PT Sans Narrow', sans-serif;
+}
+
+.price-availability-block .author strong {
+  color: $color_pomegranate_approx;
+}
+
+.price-availability-block .author strong span {
+  font-size: 15px;
+  color: $color_oslo_gray_approx;
+}
+
+.price-availability-block .availability {
+  float: right;
+  color: $color_oslo_gray_approx;
+}
+
+.description {
+  border-bottom: 1px solid $wild_sand;
+}
+
+.description p {
+  margin: 0 0 10px;
+}
+
+.product-page-cart {
+  border-bottom: 1px solid $wild_sand;
+  padding-bottom: 20px;
+  margin: 18px 0;
+}
+
+.review {
+  border-bottom: 1px solid $wild_sand;
+  padding-bottom: 15px;
+}
+
+.ml-25 {
+  margin-left: 25px;
+}
+
+.checked {
+  color: orange;
+}
+
+.social-button {
+  margin-left: 20px;
+  margin-top: 20px;
+}
+
+.social-share-button {
+  .ssb-icon {
+    background-size: 30px 30px;
+    height: 30px;
+    width: 30px;
+  }
 }
