--- a/app/assets/stylesheets/color.scss
+++ b/app/assets/stylesheets/color.scss
@@ -2,3 +2,7 @@ $color_wild_sand_approx: #f5f5f5;
 $color_gallery_approx: #eeeeee;
 $color_spring_green_approx: #00e676;
 $color_tropical_rain_forest_approx: #007b5e;
+$white: #fff;
+$wild_sand: #f4f4f4;
+$color_pomegranate_approx: #e84d1c;
+$color_oslo_gray_approx: #7b8a99;
