--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,7 +7,7 @@
           <div>
             <%= bootstrap_devise_error_messages! %>
           </div>
-          <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { role: "form" }) do |f| %> 
+          <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {multipart: true}) do |f| %> 
             <div class="form-group">
               <%= f.label :email %>
               <%= f.email_field :email, autofocus: true, class: "form-control" %>
@@ -23,6 +23,11 @@
             <div class="form-group">
               <%= f.label :password_confirmation %>
               <%= f.password_field :password_confirmation, class: "form-control" %>
+            </div>
+
+            <div class="form-group">
+              <%= f.label :avatar %>
+              <%= f.file_field :avatar %>
             </div>
 
             <div class="form-group">
