--- a/app/views/books/_book.html.erb
+++ b/app/views/books/_book.html.erb
@@ -8,12 +8,21 @@
         <%= book.name %>
       </div>
       <div class="home-book-author text-left">
-       <span>by </span>
+       <span><%= t ".by" %></span>
         <% book.authors.each do |author| %>
           <span><%= author.name %></span>
         <% end %>
       </div>
-     <div><a href="#" class="borrow-link"><%= t ".borrow" %></a></div>
+      <% if book.can_borrow? %>
+        <% if user_signed_in? && current_user.borrows.check_approve(false).first.present? %>
+          <%= link_to t(".borrow"), add_book_borrow_path(id: book.id), class: "borrow-link text-available", method: :get, remote: true %>
+        <% else %>
+          <%= link_to t(".borrow"), new_borrow_path(id: book.id), class: "borrow-link text-available", method: :get, remote: true %>
+        <% end %>
+        <span class="text-success"><%= t ".available" %></span>
+      <% else %>
+        <span class="text-warning"><%= t ".unavailable" %></span>
+      <% end %>
     </div>
   </div>
 </div>
